2014-04-29  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added Xing provider.

2014-04-24  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Marcin Skarbek contributed Hubic support, thanks!

2014-04-11  Raymond Penners  <raymond.penners@intenct.nl>

	* Volodymyr Yatsyk contributed an Ukrainian translation, thanks!

2014-03-31  Raymond Penners  <raymond.penners@intenct.nl>

	* `joke2k` contributed an Italian translation, thanks!

2014-03-22  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: All providers now support the `VERIFIED_EMAIL`
	property have e-mail addresses forced to be interpreted as
	verified.

2014-03-12  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.16.1 released.

	* Facebook login via Javascript was broken if `auth_type` was not
  	set to `reauthenticate`, fixed.

2014-03-10  Raymond Penners  <raymond.penners@intenct.nl>

        * Support for hooking up a callback when `FB.init()` is ready
	(`allauth.facebook.onInit`)

	* Version 0.16.0 released.

	* Nariman Gharib contributed a Persian translation, thanks!

2014-02-09  Raymond Penners  <raymond.penners@intenct.nl>

	* The custom signup form `save` has been deprecated in favour of a
	`def signup(request, user)` method.

2014-02-08  Raymond Penners  <raymond.penners@intenct.nl>

	* Facebook reauthentication now uses an `auth_nonce`.

2014-02-07  Raymond Penners  <raymond.penners@intenct.nl>

	* Added a new option `ACCOUNT_LOGIN_ON_EMAIL_CONFIRMATION`, to
	indicate whether or not e-mail confirmation is to automatically
	log in.

2014-02-04  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added Bitbucket provider.

	* Jack Shedd contributed Tumblr support, thanks!

	* Romanos Tsouroplis contributed Foursquare support, thanks!

2014-01-15  Raymond Penners  <raymond.penners@intenct.nl>

	* "excessivedemon" contributed Flickr support, thanks!

2013-12-26  Raymond Penners  <raymond.penners@intenct.nl>
