@@ -32,6 +32,7 @@ Jack Shedd
 Jeff Triplett
 John Bazik
 Jonas Aule
+Justin Michalicek
 Justin Pogrob
 Koichi Harakawa
 Lee Semel
