@@ -1,3 +1,9 @@
+2014-06-06  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: Justin Michalicek contributed support to control
+	session life time and age: `ACCOUNT_SESSION_COOKIE_AGE` and
+	`ACCOUNT_SESSION_REMEMBER`.
+
 2014-04-29  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: Added Xing provider.
